--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -11,5 +11,5 @@
     <label>Show in navbar? <%= f.check_box :navbar %></label>
     <label>Show in footer? <%= f.check_box :footer %></label>
   </div>
-  <%= f.submit %>
+  <%= f.submit class: 'btn btn-success' %>
 <% end %>
