--- a/app/views/home/settings.html.erb
+++ b/app/views/home/settings.html.erb
@@ -134,21 +134,21 @@
     <table class="table">
       <thead>
         <tr>
-          <th>Name</th><th></th>
+          <th>Name</th><th></th><th></th>
         </tr>
       </thead>
       <tbody>
         <% @pages.each do |page| %>
           <tr>
             <td><%= link_to page.name, page_path(id: page.id) %></td>
-            <td><%= link_to 'Edit', edit_page_path(id: page.id) %></td>
-            <td><%= link_to 'Delete', page, method: :delete %></td>
+            <td><%= link_to 'Edit', edit_page_path(id: page.id), class: 'btn btn-success btn-xs' %></td>
+            <td><%= link_to 'Delete', page, method: :delete, class: 'btn btn-danger btn-xs', confirm: 'Are you sure you want to delete this whole page? You can\'t undo this!' %></td>
           </tr>
         <% end %>
       </tbody>
     </table>
 
-    <%= link_to 'Create New Page', new_page_path %>
+    <%= link_to 'Create New Page', new_page_path, class: 'btn btn-success' %>
   </div>
 </div>
 
