--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -106,6 +106,20 @@
   </div>
 </div>
 
+<div id="comment-block">
+<%= render partial: 'comments/comment_block' %>
+</div>
+
+<div id="post-comment">
+  <legend>Post a Comment</legend>
+  <%= form_for Comment.new do |f| %>
+    <%= f.hidden_field :movie_id, value: @movie.id %>
+    <%= f.text_field :name, placeholder: 'Name', class: 'form-control' %><br>
+    <%= f.text_area :body, placeholder: 'This movie is aweful because...', class: 'form-control', rows:'10', required: true %><br>
+    <%= f.submit 'Submit' %>
+  <% end %>
+</div>
+
 <script>
   function switch_local_player() {
     $('.vid-container').html("<embed src='/theater/movies/<%= @movie.encodes.first.filename %>' autoplay=true width='100%' height='100%'></embed>");
