--- a/app/views/comments/_comment_block.html.erb
+++ b/app/views/comments/_comment_block.html.erb
@@ -4,9 +4,11 @@
   <tbody>
     <% @comments.each do |c| %>
       <tr>
-        <td width='20%'><strong><%= c.name.blank? ? 'Human' : c.name %></strong><br><%= c.created_at %></td>
+        <td width='20%'><strong><%= c.name.blank? ? 'Human' : c.name %></strong><br><%= c.id %></td>
         <td><%= c.body %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= paginate @comments %>
