--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,1 +1,1 @@
-$('#comment-block').html('<%=j render partial: "comment_block" %>');
+$('#comment-block').html('<%=j render partial: "comments/comment_block" %>');
