tastes like markdown!

--- a/app/views/comments/_comment_block.html.erb
+++ b/app/views/comments/_comment_block.html.erb
@@ -4,8 +4,8 @@
   <tbody>
     <% @comments.each do |c| %>
       <tr>
-        <td width='20%'><strong><%= c.name.blank? ? 'Human' : c.name %></strong><br><%= c.id %></td>
-        <td><%= c.body %></td>
+        <td width='20%'><strong><%= c.name.blank? ? 'Human' : c.name %></strong><br>#<%= c.id %></td>
+        <td><%= c.body_html.html_safe %></td>
       </tr>
     <% end %>
   </tbody>
