add movie watched recording

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -20,6 +20,10 @@
       <div class="col-md-6">
         <table class='table'>
           <tr>
+            <th>Watched: </th>
+            <td><%= @movie.watches %> times</td>
+          </tr>
+          <tr>
             <th>Release Date: </th>
             <td><%= @movie.release_date %></td>
           </tr>
@@ -29,7 +33,7 @@
           </tr>
           <tr>
             <th>Runtime: </th>
-            <td><%= @movie.runtime %></td>
+            <td><%= @movie.runtime %> minutes</td>
           </tr>
           <tr>
             <th>Genre: </th>
@@ -135,4 +139,16 @@
   }
 
   updatePreview();
+
+  var video = document.getElementsByTagName('video')[0];
+  function check_if_played() {
+    console.log("checking...");
+    if (video.currentTime > (video.duration / 2)) {
+      $.ajax("watch/<%= @movie.id %>");
+      console.log("marked as seen");
+      clearInterval(checker);
+    }
+  }
+
+  var checker = window.setInterval(check_if_played, 10000);
 </script>
