add more views stuff

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -20,7 +20,7 @@
       <div class="col-md-6">
         <table class='table'>
           <tr>
-            <th>Watched: </th>
+            <th>Viewed: </th>
             <td><%= @movie.watches %> times</td>
           </tr>
           <tr>
