display most viewed this week

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -21,7 +21,7 @@
         <table class='table'>
           <tr>
             <th>Viewed: </th>
-            <td><%= @movie.watches %> times</td>
+            <td><%= @movie.views.count %> times</td>
           </tr>
           <tr>
             <th>Release Date: </th>
