correct name -> title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              
+
 
               <li><%= link_to "Home", '/theater' %></li>
 
@@ -82,6 +82,7 @@
       <%= link_to page.name, page %>.
     <% end %>
 
+    <a href="/stats">Stats</a>
     </p>
   </div>
 
