add quick and dirty episode count

--- a/app/views/home/charts.html.erb
+++ b/app/views/home/charts.html.erb
@@ -7,7 +7,7 @@
     <h3>Movies: <%= Movie.count %></h3>
   </div>
   <div class='col-md-4'>
-    <h3>Shows: <%= Show.count %></h3>
+    <h3>Shows: <%= Show.count %> (<%= @tv_eps %> episodes)</h3>
   </div>
   <div class='col-md-4'>
     <h3>Songs: <%= Song.count %></h3>
