add music controller spec

--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -10,8 +10,7 @@
         <li><a href="#" id="play-pause" class="pause"><span id="play-pause-span" class="glyphicon glyphicon-pause"></span></a></li>
         <li><a href="#" id="forward"><span class="glyphicon glyphicon-step-forward"></span></a></li>
         <li><a id="now-playing">Nothing playing yet...</a></li>
-        <li>
-        </li>
+        <li></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" style="padding-right:10px;">
         <li><a href="#" onClick="$('#playlist-div').toggle()">Playlist</a></li>
@@ -35,73 +34,4 @@
   <%= render partial: @partial %>
 </div>
 
-<script>
-  var playing = false;
-
-  function start_playing() {
-    playing = true;
-    $('#playlist li a').click();
-  }
-
-  function play(elem) {
-    $('.active').removeClass('active');
-    set_song($(elem).attr('filename'));
-    $(elem).addClass('active');
-    $('#now-playing').html($(elem).attr('title') + ' - ' + $(elem).attr('artist'));
-  }
-
-  function next() {
-    console.log($('.active').html())
-    $('.active').parent().next().find('a').click();
-  }
-
-  function last() {
-    console.log($('.active').html())
-    $('.active').parent().prev().find('a').click();
-  }
-
-  function set_song(filename) {
-    $('#nav-audio-source').attr('src', filename);
-    var player = document.getElementById("nav-audio-controls");
-    player.load();
-    player.play();
-  }
-
-  function add(elem) {
-    li = build_pl_item(
-      $(elem).attr('artist'),
-      $(elem).attr('album'),
-      $(elem).attr('title'),
-      $(elem).attr('filename')
-      );
-    $('#playlist').append(li);
-
-    if (!playing) { start_playing(); }
-  }
-
-  function build_pl_item(artist, album, title, filename) {
-    return '<li><a href="#" onClick="play(this)" class="playlist-elem" artist="' + artist + '" album="' + album + '" title="' + title + '" filename="' + filename + '">' + artist + " - " + title + "</a></li>";
-  }
-
-  $('#nav-audio-controls')[0].addEventListener('ended',function(e){
-    next();
-  });
-  $('#forward').click(next);
-  $('#back').click(last);
-  $("#play-pause")[0].onclick = function(){
-    if ($("#play-pause-span").hasClass("glyphicon-play")) {
-      $("#play-pause-span").addClass("glyphicon-pause").removeClass("glyphicon-play");
-      document.getElementById("nav-audio-controls").play();
-    } else {
-      $("#play-pause-span").addClass("glyphicon-play").removeClass("glyphicon-pause");
-      document.getElementById("nav-audio-controls").pause();
-    }
-  }
-
-  // load more when user hits bottom of page
-  $(window).scroll(function () {
-      if ($(document).height() <= $(window).scrollTop() + $(window).height() + 200) {
-          $("#more-link").click();
-      }
-   });
-  </script>
+<%= javascript_include_tag 'application', 'music' %>
