--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
       <h2>Television</h2>
       <%= form_tag(shows_search_path, role: 'search') do %>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search Television" name="q">
+        <input type="text" class="form-control" placeholder="Search Television" name="q" id="tv-search">
       </div>
       <% end %>
     </div>
@@ -28,7 +28,7 @@
       <h2>Films</h2>
       <%= form_tag(movies_search_path, role: 'search') do %>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search Films" name="q">
+        <input type="text" class="form-control" placeholder="Search Films" name="q" id="movie-search">
       </div>
       <% end %>
     </div>
@@ -36,7 +36,7 @@
       <h2>Music</h2>
       <%= form_tag('', role: 'search') do %>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search Music" name="q">
+        <input type="text" class="form-control" placeholder="Search Music" name="q" id="music-search">
       </div>
       <% end %>
     </div>
