--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
     <div id="push"></div>
   </div>
 
-  <div id="footer">
+  <div class="footer">
     <%= Setting.render(:footer) %>
 
     <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <%= link_to "About", about_path %>. <%= link_to "Settings", settings_path %>.
