--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -140,7 +140,7 @@
 
   <div class="col-md-6">
   <legend>Pages</legend>
-    <table class="table">
+    <table class="table" id="pages_table">
       <thead>
         <tr>
           <th>Name</th><th></th><th></th>
