add movie page spec

--- a/app/views/comments/_comment_block.html.erb
+++ b/app/views/comments/_comment_block.html.erb
@@ -1,4 +1,4 @@
-<legend>Comments</legend>
+<legend>Comments <span class="sublegend">Most Recent First</span></legend>
 
 <table class='table'>
   <tbody>
