--- a/app/views/encodes/_retag_modal.html.erb
+++ b/app/views/encodes/_retag_modal.html.erb
@@ -1,5 +1,5 @@
 <!-- Button trigger modal -->
-<a href="#" class="pull-right" data-toggle="modal" data-target="#retag-<%= encode.id %>">
+<a href="#" class="pull-right retag-link" data-toggle="modal" data-target="#retag-<%= encode.id %>">
   <span class="glyphicon glyphicon-tag"></span>
 </a>
 
