add movie search service

--- a/app/views/movies/browse.html.erb
+++ b/app/views/movies/browse.html.erb
@@ -13,7 +13,7 @@
 
     <div class="col-md-4">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Description" name="desc">
+        <input type="text" class="form-control" placeholder="Description" name="overview">
       </div>
     </div>
 
