increase movie test coverage

--- a/app/views/movies/browse.html.erb
+++ b/app/views/movies/browse.html.erb
@@ -128,8 +128,8 @@
   <br>
   <%= submit_tag "Go!", class: "btn pull-right" %>
   <span class='pull-right'>
-    <%= select_tag :sort, options_for_select(Movie.sort_orders), {class: 'form-control'} %>
-  </span> 
+    <%= select_tag :sort, options_for_select(Movie::SORT_ORDERS), {class: 'form-control'} %>
+  </span>
   <span class='pull-right' style="padding-top:8px;">
     <a href="#" onClick="$('#extra-filters').toggle()">Show Extra Filters</a>&nbsp;&nbsp;
   </span>
