fix views for new genre schema

--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -21,8 +21,7 @@
           <tr>
             <th>Genre: </th>
             <td>
-              <!-- TODO add show_id to genres duh -->
-              <%# @show.genres.map {|g| link_to(g.genre, "/genre/#{g.genre_id}")}.join(', ') %>
+              <%= @show.genres.map(&:name).join(', ').html_safe %>
             </td>
           </tr>
           <tr>
